--- a/Lab5_AppDev/index.html
+++ b/Lab5_AppDev/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal CV</title>
-    <link rel="stylesheet" href="./CSS/normalize.css">
-    <link rel="stylesheet" href="./CSS/resets.css">
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="CSS/CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/CSS/resets.css">
+    <link rel="stylesheet" href="CSS/CSS/styles.css">
 </head>
 <body>
 
